[package]
name = "dissimkl"
version = "0.1.0"
edition = "2021"
description = "Discord Rich Presence for Simkl"
authors = []
license = "MIT"

[[bin]]
name = "dissimkl"
path = "src/main.rs"

[dependencies]
discord-rich-presence = "1.1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
configparser = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
lru = "0.12"
open = "5"
winit = "0.30"
anyhow = "1"
dirs = "5"
dark-light = "2"
scraper = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.19"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
